--- a/src/App.css
+++ b/src/App.css
@@ -1,15 +1,12 @@
 .App {
   text-align: center;
+  display: flex;
+  flex-direction: line;
 }
 
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 40vmin;
-  pointer-events: none;
-}
-
-.App-header {
+.Picture-container {
   background-color: #282c34;
+  width: 500px;
   min-height: 100vh;
   display: flex;
   flex-direction: column;
@@ -19,8 +16,52 @@
   color: white;
 }
 
-.App-link {
-  color: #61dafb;
+.Posts {
+  background-color: #FAFAFA;
+  display: flex;
+  flex-direction: column;
+  max-width: 500px;
+  font-size: 12px;
+  max-height: 100vh;
+  padding-right: 70px;
+  padding-left: 70px;
+}
+
+.Post{
+  display: flex;
+  flex-direction: line;
+  text-align: left;
+  align-items: flex-start;
+  border-bottom: 1px solid #E0E0E0;
+}
+
+.Post-core{
+  flex-direction: column;
+}
+
+.Post-body{
+  color: black;
+  width: 400px;
+  font-size: 12px;
+}
+
+.Post-footer{
+  flex-direction: line;
+  color: #757575;
+}
+
+.Vote-counter{
+  font-weight: bold;
+  font-size: 11px;
+  text-align: center;
+  height: auto;
+  background-color: #4CAF50;
+  border-radius: 7px;
+  line-height: 40px;
+  height: 40px;
+  margin-left: 16px;
+  width: 40px;
+  color: white;
 }
 
 @keyframes App-logo-spin {
