--- a/src/App.css
+++ b/src/App.css
@@ -23,8 +23,8 @@
   max-width: 500px;
   font-size: 12px;
   max-height: 100vh;
-  padding-right: 70px;
-  padding-left: 70px;
+  padding-right: 40px;
+  padding-left: 40px;
 }
 
 .Post{
@@ -33,6 +33,10 @@
   text-align: left;
   align-items: flex-start;
   border-bottom: 1px solid #E0E0E0;
+}
+
+.Vote-buttons-set{
+  flex-direction: column;
 }
 
 .Post-core{
