--- a/src/App.css
+++ b/src/App.css
@@ -2,11 +2,12 @@
   text-align: center;
   display: flex;
   flex-direction: line;
+  width: 100%;
 }
 
-.Picture-container {
+.Observer {
   background-color: #282c34;
-  width: 500px;
+  width: 55%;
   min-height: 100vh;
   display: flex;
   flex-direction: column;
@@ -20,11 +21,12 @@
   background-color: #FAFAFA;
   display: flex;
   flex-direction: column;
-  max-width: 700px;
+  width: 45%;
   font-size: 12px;
   max-height: 100vh;
   padding-right: 40px;
   padding-left: 5px;
+  overflow-y: scroll;
 }
 
 .Post{
@@ -44,7 +46,7 @@
 }
 
 .Vote-button{
-  width: 25px;
+  width: 27px;
   height: 23px;
   margin-top: 5px;
 }
